--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,8 @@ jobs:
         - run:
             name: Create Cloudformation Stack
             command: |
-              echo this is ${AWS_SECRET_ACCESS_KEY}
+              aws iam list-users
+              aws configure set aws_session_token "${AWS_SECRET_ACCESS_KEY}"
               aws cloudformation deploy \
                 --template-file template.yml \
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
