--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 orbs:
   # Choose either one of the orbs below
   #welcome: circleci/welcome-orb@0.4.1
-  #aws-cli: circleci/aws-cli@2.0.3
+  aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
 jobs:
   create_infrastructure: 
@@ -14,8 +14,6 @@ jobs:
         - run:
             name: Create Cloudformation Stack
             command: |
-              aws configure set aws_session_token "${AWS_SECRET_ACCESS_KEY}"
-              echo we out
               aws cloudformation deploy \
                 --template-file template.yml \
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
