--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
         - run:
             name: Create Cloudformation Stack
             command: |
+              aws configure set aws_session_token "${AWS_SECRET_ACCESS_KEY}"
               aws cloudformation deploy \
                 --template-file template.yml \
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
