--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,10 @@ jobs:
         - run:
             name: Create Cloudformation Stack
             command: |
-              
               aws cloudformation deploy \
                 --template-file template.yml \
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-                --region us-east-1
+                --region ${AWS_DEFAULT_REGION}
 # Sequential workflow
 workflows:
   # Name the workflow
