--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,10 @@ jobs:
             apk add --update ansible
       - run:
           name: Run Playbook and Configure server
-          command: |
-            ansible-playbook -y main-remote.yml -i inventory 
+          expect:
+            command: |
+              ansible-playbook main-remote.yml -i inventory
+            response: 'First Question in the prompt' : 'y'
 # Sequential workflow
 workflows:
   # Name the workflow
