--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,10 +34,10 @@ jobs:
       - run:
           name: Run Playbook and Configure server
           expect:
-            - command: |
+            command: |
                 ansible-playbook main-remote.yml -i inventory
-            - responses: 
-                First_question: 'y'
+            responses: 
+               - First_question: 'y'
 # Sequential workflow
 workflows:
   # Name the workflow
