--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,10 @@ jobs:
           name: Run Playbook and Configure server
           expect:
             command: |
-                ansible-playbook main-remote.yml -i inventory
+              ansible-playbook main-remote.yml -i inventory
             responses: 
-               - First_question: 'y'
+              First_question: 
+                - 'y'
 # Sequential workflow
 workflows:
   # Name the workflow
