--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,15 @@ jobs:
           name: Install Ansible
           command: |
             apk add --update ansible
+      - run: 
+          name: install expect
+          command: |
+            apt-get install expect      
       - run:
           name: Run Playbook and Configure server
           expect:
             command: |
+              
               ansible-playbook main-remote.yml -i inventory
             responses: 
               First_question: 
