--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           expect:
             command: |
               ansible-playbook main-remote.yml -i inventory
-            !responses !First_question "y"
+            !responses !First_question y
 
 # Sequential workflow
 workflows:
