--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,15 +26,11 @@ jobs:
       - checkout
       - add_ssh_keys:
           # You can get this ID in the section where you registered the SSH Key
-          fingerprints: ["42:9b:13:73:74:e3:6b:ad:14:2c:0f:76:28:f9:5e:e8"] 
+          fingerprints: ["9f:30:c7:40:93:bb:41:68:d8:2e:4e:97:fa:0e:e9:a3"] 
       - run:
           name: Install Ansible
           command: |
-            apk add --update ansible
-      - run: 
-          name: install expect
-          command: |
-            apt-get install expect      
+            apk add --update ansible     
       - run:
           name: Run Playbook and Configure server 
           command: |
