--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
   
   configure_infrastructure: 
     docker:
-      - image: python:3.7-alpine3.11
+      - image: python:3.7-alpine3.16
     steps:
       - checkout
       - add_ssh_keys:
@@ -32,9 +32,10 @@ jobs:
           command: |
             apk add --update ansible     
       - run:
-          name: Run Playbook and Configure server 
-          command: |
-              ansible-playbook main-remote.yml -i inventory
+          name: Run Playbook and Configure server
+          expect: 
+            command: |
+                ansible-playbook main-remote.yml -i inventory
             
 
 # Sequential workflow
