--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,25 @@ jobs:
           name: Run Playbook and Configure server
           command: |
               ansible-playbook main-remote.yml -i inventory
+
+  smoke_test:
+    docker:
+      - image: alpine:latest
+    steps:
+      - run: 
+          name: install curl
+          command: apk add --update curl
+      - run:
+          name: smoke test
+          command: |
+            URL="https://blog.udacity.com/"
+            # Test if website exists
+            if curl -s --head ${URL} 
+            then
+              return 0
+            else
+              return 1
+            fi
             
 
 # Sequential workflow
@@ -43,5 +62,6 @@ workflows:
   myWorkflow:
     jobs:
       #- create_infrastructure
-      - configure_infrastructure
+      #- configure_infrastructure
+      - smoke_test
       
