rollback job added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,9 +83,12 @@ workflows:
   myWorkflow:
     jobs:
       - create_infrastructure
+      - configure_infrastructure:
+          requires:
+            - create_infrastructure
       - smoke_test:
           requires: 
-            - create_infrastructure
+            - configure_infrastructure
 
       #- configure_infrastructure
       
