--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,13 +29,7 @@ jobs:
               --template-file template.yml \
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7} \
               --region ${AWS_DEFAULT_REGION}
-      - run:
-          name: create inventory
-          command: |
-            echo [ec2Instances] > inventory; 
-            aws ec2 describe-instances \ 
-            --query 'Reservations[*].Instances[*].PublicIpAddress'  \  
-            --output text >> inventory;
+      
   
   configure_infrastructure: 
     docker:
@@ -53,6 +47,7 @@ jobs:
       - run:
           name: Run Playbook and Configure server
           command: |
+              echo mid
               ansible-playbook main-remote.yml -i inventory
 
   smoke_test_if:
