--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ workflows:
   myWorkflow:
     jobs:
       #- create_infrastructure
-      - configure_infrastructure:
+      - configure_infrastructure
       - smoke_test:
           requires: 
             - configure_infrastructure
