--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,9 @@ orbs:
 #define commands for reuseability
 commands:
    destroy_environment:
-     steps:
+      docker:
+        - image: amazon/aws-cli
+      steps:
        - run:
            name: Destroy environment
            # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
