change smoke test image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,10 +84,10 @@ workflows:
   # Name the workflow
   myWorkflow:
     jobs:
-      #- create_infrastructure
-      - configure_infrastructure
+      - create_infrastructure
+      #- configure_infrastructure
       - smoke_test:
           requires: 
-            - configure_infrastructure
+            - create_infrastructure
       
       
